@@ -1,12 +1,13 @@
 /*
  * This prototype for k5-int.h (Krb5 internals include file)
- * simply includes every file
- * in the lower krb5 directory, more or less.
+ * includes the user-visible definitions from krb5.h and then
+ * includes other definitions that are not user-visible but are
+ * required for compiling Kerberos internal routines.
  *
  * John Gilmore, Cygnus Support, Sat Jan 21 22:45:52 PST 1995
  */
 
-#include "krb5/krb5.h"
+#include "krb5.h"
 
 /* krb5/krb5.h includes many other krb5/*.h files too.  The ones that it
    doesn't include, we include below.  */
@@ -22,11 +23,9 @@
 #include "krb5/libos.h"
 #include "krb5/los-proto.h"
 #include "krb5/mit-des.h"
-/* #include "krb5/narrow.h" -- used in encryption.h and others, custom usage */
 #include "krb5/preauth.h"
 /* #include "krb5/rsa-md4.h" -- removed from krb5 to lib/crypto/md4 */
 #include "krb5/rsa-md5.h"
 /* #include "krb5/stock" */
 #include "krb5/sysincl.h"
-/* #include "krb5/widen.h" -- used in encryption.h, custom usage. */
 /* #include "krb5/wordsize.h" -- comes in through base-defs.h. */
